fix auth middlewares and api docs
